--- a/themes/hugo-theme-bootstrap4-blog/layouts/_default/baseof.html
+++ b/themes/hugo-theme-bootstrap4-blog/layouts/_default/baseof.html
@@ -1,122 +1,106 @@
 <!DOCTYPE html>
-<html lang="{{ .Lang }}" {{ if or (eq .Lang "ar" ) (eq .Lang "fa" ) }}dir="rtl" {{ end }}>
+<html lang="{{ .Lang }}" {{ if or (eq .Lang "ar") (eq .Lang "fa") }}dir="rtl"{{ end }}>
 
-<head>
-  {{ partial "head-meta.html" . }}
+  <head>
+    {{ partial "head-meta.html" . }}
 
-  {{ block "schema-dot-org" . }}
-  <!-- schema.org metadata differs for Nodes and Pages -->
-  {{ end }}
-  <a rel="me" href="https://mastodon.social/@heinz">Mastodon</a>
-  <link rel="canonical" href="{{ .Permalink }}">
+    {{ block "schema-dot-org" . }}
+      <!-- schema.org metadata differs for Nodes and Pages -->
+    {{ end }}
 
-  <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
+    <link rel="canonical" href="{{ .Permalink }}">
 
-  {{ if or (eq .Lang "ar") (eq .Lang "fa") }}
-  {{ "
-  <!-- RTL -->" | safeHTML }}
-  {{ $styleRtl := resources.Get "css/style.rtl.css" | resources.Fingerprint }}
-  <link href="{{ $styleRtl.Permalink }}" rel="stylesheet" {{ if not .Site.Params.disable_sri }}
-    integrity="{{ $styleRtl.Data.Integrity }}" crossorigin="anonymous" {{ end }}>
-  {{ else }}
-  {{ "
-  <!-- combined, minified CSS -->" | safeHTML }}
-  {{ $style := resources.Get "css/style.css" | resources.Fingerprint }}
-  <link href="{{ $style.Permalink }}" rel="stylesheet" {{ if not .Site.Params.disable_sri }}
-    integrity="{{ $style.Data.Integrity }}" crossorigin="anonymous" {{ end }}>
-  {{ end }}
+    <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
 
-  {{ "
-  <!-- minified Font Awesome for SVG icons -->" | safeHTML }}
-  {{ $fontawesome := resources.Get "js/fontawesome.min.js" | resources.Fingerprint }}
-  <script defer src="{{ $fontawesome.Permalink }}" integrity="{{ $fontawesome.Data.Integrity }}"
-    crossorigin="anonymous"></script>
+    {{ if or (eq .Lang "ar") (eq .Lang "fa") }}
+    {{ "<!-- RTL -->" | safeHTML }}
+    {{ $styleRtl := resources.Get "css/style.rtl.css" | resources.Fingerprint }}
+    <link href="{{ $styleRtl.Permalink }}" rel="stylesheet"{{ if not .Site.Params.disable_sri }} integrity="{{ $styleRtl.Data.Integrity }}" crossorigin="anonymous"{{ end }}>
+    {{ else }}
+    {{ "<!-- combined, minified CSS -->" | safeHTML }}
+    {{ $style := resources.Get "css/style.css" | resources.Fingerprint }}
+    <link href="{{ $style.Permalink }}" rel="stylesheet"{{ if not .Site.Params.disable_sri }} integrity="{{ $style.Data.Integrity }}" crossorigin="anonymous"{{ end }}>
+    {{ end }}
 
-  {{ "
-  <!-- RSS 2.0 feed -->" | safeHTML }}
-  {{ with .OutputFormats.Get "rss" -}}
-  {{ printf `
-  <link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
-  {{ end -}}
+    {{ "<!-- minified Font Awesome for SVG icons -->" | safeHTML }}
+    {{ $fontawesome := resources.Get "js/fontawesome.min.js" | resources.Fingerprint }}
+    <script defer src="{{ $fontawesome.Permalink }}" integrity="{{ $fontawesome.Data.Integrity }}" crossorigin="anonymous"></script>
 
-  {{ template "_internal/google_analytics_async.html" . }}
+    {{ "<!-- RSS 2.0 feed -->" | safeHTML }}
+    {{ with .OutputFormats.Get "rss" -}}
+      {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+    {{ end -}}
 
-  {{ if .Site.Params.cookie_consent_info_url }}
-  {{ partial "cookie-consent.html" . }}
-  {{ end }}
+    {{ template "_internal/google_analytics_async.html" . }}
 
-  {{ partial "head-custom.html" . }}
-</head>
+    {{ if .Site.Params.cookie_consent_info_url }}
+    {{ partial "cookie-consent.html" . }}
+    {{ end }}
 
-<body>
+    {{ partial "head-custom.html" . }}
+  </head>
 
-  {{ block "masthead" . }}
-  <div class="blog-masthead">
-    <div class="container">
-      <nav class="nav blog-nav">
-        <a class="nav-link {{ if .IsHome }}active{{ end }}" href="{{ .Site.BaseURL | absLangURL }}">{{ i18n "home"
-          }}</a>
-        {{- $currentPage := . -}}
-        {{ range .Site.Menus.navbar }}
-        {{ $menuURL := .URL | absLangURL }}
-        <a class="nav-link{{ if or ($currentPage.IsMenuCurrent " navbar" .) ($currentPage.HasMenuCurrent "navbar" .) }}
-          active{{end}}" href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
-        {{ end }}
-      </nav>
+  <body>
+
+    {{ block "masthead" . }}
+    <div class="blog-masthead">
+      <div class="container">
+        <nav class="nav blog-nav">
+          <a class="nav-link {{ if .IsHome }}active{{ end }}" href="{{ .Site.BaseURL | absLangURL }}">{{ i18n "home" }}</a>
+          {{- $currentPage := . -}}
+          {{ range .Site.Menus.navbar }}
+          {{ $menuURL := .URL | absLangURL }}
+          <a class="nav-link{{ if or ($currentPage.IsMenuCurrent "navbar" .) ($currentPage.HasMenuCurrent "navbar" .) }} active{{end}}" href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
+          {{ end }}
+        </nav>
+      </div>
     </div>
-  </div>
-  {{ end }}
+    {{ end }}
 
-  {{ block "header" . }}
-  {{ if (ne .Site.Params.header_visible false) }}
-  <header class="blog-header">
+    {{ block "header" . }}
+    {{ if (ne .Site.Params.header_visible false) }}
+    <header class="blog-header">
+      <div class="container">
+        <h1 class="blog-title" dir="auto"><a href="{{ .Site.BaseURL | absURL }}" rel="home">{{ .Site.Title | safeHTML }}</a></h1>
+        {{ if .Site.Params.description }}<p class="lead blog-description" dir="auto">{{ .Site.Params.description | markdownify }}</p>{{ end }}
+      </div>
+    </header>
+    {{ end }}
+    {{ end }}
+
+    {{ block "body" . }}
     <div class="container">
-      <h1 class="blog-title" dir="auto"><a href="{{ .Site.BaseURL | absURL }}" rel="home">{{ .Site.Title | safeHTML
-          }}</a></h1>
-      {{ if .Site.Params.description }}<p class="lead blog-description" dir="auto">{{ .Site.Params.description |
-        markdownify }}</p>{{ end }}
-    </div>
-  </header>
-  {{ end }}
-  {{ end }}
+      <div class="row">
+        <div class="col-sm-8 blog-main">
 
-  {{ block "body" . }}
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-8 blog-main">
+          {{ block "main" . }}
+          <!-- The part of the page that begins to differ between templates -->
+          {{ end }}
 
-        {{ block "main" . }}
-        <!-- The part of the page that begins to differ between templates -->
-        {{ end }}
+        </div> {{ "<!-- /.blog-main -->" | safeHTML }}
 
-      </div> {{ "
-      <!-- /.blog-main -->" | safeHTML }}
+        {{ partial "sidebar.html" . }}
 
-      {{ partial "sidebar.html" . }}
+      </div> {{ "<!-- /.row -->" | safeHTML }}
+    </div> {{ "<!-- /.container -->" | safeHTML }}
+    {{ end }}
 
-    </div> {{ "
-    <!-- /.row -->" | safeHTML }}
-  </div> {{ "
-  <!-- /.container -->" | safeHTML }}
-  {{ end }}
-
-  {{ block "footer" . }}
-  <footer class="blog-footer">
-    <p dir="auto">
+    {{ block "footer" . }}
+    <footer class="blog-footer">
+      <p dir="auto">
       {{ if .Site.Copyright }}
       {{ .Site.Copyright | markdownify }}
       {{ else }}
-      Blog template created by <a href="https://twitter.com/mdo">@mdo</a>, ported to Hugo by <a
-        href='https://twitter.com/mralanorth'>@mralanorth</a>.
+      Blog template created by <a href="https://twitter.com/mdo">@mdo</a>, ported to Hugo by <a href='https://twitter.com/mralanorth'>@mralanorth</a>.
       {{ end }}
-    </p>
-    <p>
+      </p>
+      <p>
       <a href="#">{{ i18n "backToTop" }}</a>
-    </p>
-  </footer>
-  {{ end }}
+      </p>
+    </footer>
+    {{ end }}
 
-</body>
+  </body>
 
 </html>
 
