Add mastodon link
Signed-off-by: Heinz N. Gies <heinz@licenser.net>

--- a/themes/hugo-theme-bootstrap4-blog/layouts/partials/sidebar.html
+++ b/themes/hugo-theme-bootstrap4-blog/layouts/partials/sidebar.html
@@ -17,6 +17,7 @@
       {{ range . }}
       <li><a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
       {{ end }}
+      <a rel="me" href="https://mastodon.social/@heinz">Mastodon</a>
     </ol>
   </section>
   {{ end }}
