--- a/themes/hugo-theme-bootstrap4-blog/layouts/_default/baseof.html
+++ b/themes/hugo-theme-bootstrap4-blog/layouts/_default/baseof.html
@@ -88,6 +88,11 @@
     {{ block "footer" . }}
     <footer class="blog-footer">
       <p dir="auto">
+        <a href="https://firechicken.club/licenser/prev">←</a>
+        <a href="https://firechicken.club">🔥🐓</a>
+        <a href="https://firechicken.club/licenser/next">→</a>
+      </p>
+      <p dir="auto">
       {{ if .Site.Copyright }}
       {{ .Site.Copyright | markdownify }}
       {{ else }}
